--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.15.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-along": "^1.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
